[tool.poetry]
name = "flask-rest-examplle"
version = "0.1.0"
description = ""
authors = ["Alexander <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
